Split out and strenghen tests